Muestras finales del proyecto

--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Título SEO -->
+    <title>
+      Silvestre - Dulce de Leche Artesanal desde Mercedes-Suipacha, Buenos Aires
+    </title>
+
+    <!-- Meta Descripción -->
+    <meta
+      name="description"
+      content="Descubre Silvestre, un dulce de leche artesanal elaborado con ingredientes 100% naturales y leche de tambo propio en Mercedes-Suipacha , Buenos Aires. ¡Sabor y tradición en cada cucharada!"
+    />
+
+    <!-- Palabras Clave -->
+    <meta
+      name="keywords"
+      content="dulce de leche artesanal, Silvestre, Mercedes, Suipacha, Buenos Aires, productos lácteos, postres argentinos, tradición familiar, ingredientes naturales"
+    />
+
+    <!-- Autor -->
+    <meta name="author" content="Silvestre" />
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/mi-landing/src/assets/logos/favicon.ico"
+    />
+
+    <!-- Open Graph (Para compartir en redes sociales) -->
+    <meta
+      property="og:title"
+      content="Silvestre - Dulce de Leche Artesanal desde Mercedes-Suipacha, Buenos Aires"
+    />
+    <meta
+      property="og:description"
+      content="Descubre Silvestre, un dulce de leche artesanal elaborado con ingredientes 100% naturales y leche de tambo propio en Mercedes-Suipacha, Buenos Aires. ¡Sabor y tradición en cada cucharada!"
+    />
+    <meta
+      property="og:image"
+      content="https://silvestre.unquidev.com/imagen-seo.jpg"
+    />
+    <meta property="og:url" content="https://silvestre.unquidev.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Silvestre - Dulce de Leche Artesanal desde Mercedes-Suipacha, Buenos Aires"
+    />
+    <meta
+      name="twitter:description"
+      content="Descubre Silvestre, un dulce de leche artesanal elaborado con ingredientes 100% naturales y leche de tambo propio en Mercedes-Suipacha, Buenos Aires. ¡Sabor y tradición en cada cucharada!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://silvestre.unquidev.com/imagen-seo.jpg"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://silvestre.unquidev.com/" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Fuentes y optimización SEO adicional -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Importante para evitar indexar páginas en desarrollo -->
+    <!-- <meta name="robots" content="noindex, nofollow"> -->
   </head>
   <body>
     <div id="root"></div>
