--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       property="og:image"
       content="https://silvestre.unquidev.com/imagen-seo.jpg"
     />
-    <meta property="og:url" content="https://silvestre.unquidev.com/" />
+    <meta property="og:url" content="https://silvestreddl.com/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Cards -->
@@ -60,11 +60,11 @@
     />
     <meta
       name="twitter:image"
-      content="https://silvestre.unquidev.com/imagen-seo.jpg"
+      content="https://silvestreddl.com/imagen-seo.jpg"
     />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://silvestre.unquidev.com/" />
+    <link rel="canonical" href="https://silvestreddl.com/" />
 
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
