--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <!-- Autor -->
-    <meta name="author" content="Silvestre" />
+    <meta name="author" content="Silvestre DDL" />
 
     <!-- Favicon -->
     <link
@@ -41,40 +41,16 @@
       property="og:description"
       content="Descubre Silvestre, un dulce de leche artesanal elaborado con ingredientes 100% naturales y leche de tambo propio en Mercedes-Suipacha, Buenos Aires. ¡Sabor y tradición en cada cucharada!"
     />
-    <meta
-      property="og:image"
-      content="https://silvestre.unquidev.com/imagen-seo.jpg"
-    />
+    <meta property="og:image" content="https://silvestreddl.com/logo2.jpg" />
     <meta property="og:url" content="https://silvestreddl.com/" />
     <meta property="og:type" content="website" />
-
-    <!-- Twitter Cards -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Silvestre - Dulce de Leche Artesanal desde Mercedes-Suipacha, Buenos Aires"
-    />
-    <meta
-      name="twitter:description"
-      content="Descubre Silvestre, un dulce de leche artesanal elaborado con ingredientes 100% naturales y leche de tambo propio en Mercedes-Suipacha, Buenos Aires. ¡Sabor y tradición en cada cucharada!"
-    />
-    <meta
-      name="twitter:image"
-      content="https://silvestreddl.com/imagen-seo.jpg"
-    />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://silvestreddl.com/" />
 
-    <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-
     <!-- Fuentes y optimización SEO adicional -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <!-- Importante para evitar indexar páginas en desarrollo -->
-    <!-- <meta name="robots" content="noindex, nofollow"> -->
   </head>
   <body>
     <div id="root"></div>
